2011-04-15  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by David Levin.

        Expose unified Quota API if QUOTA build flag is enabled
        https://bugs.webkit.org/show_bug.cgi?id=58648

        Added a layout test, also added skipped entries on platforms
        where the QUOTA flag is not enabled.

        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:
        * storage/script-tests/TEMPLATE.html: Added.
        * storage/script-tests/storageinfo-query-usage.js: Added.
        * storage/storageinfo-query-usage-expected.txt: Added.
        * storage/storageinfo-query-usage.html: Added.

2011-04-15  Oliver Hunt  <oliver@apple.com>

        GC allocate Structure
        https://bugs.webkit.org/show_bug.cgi?id=58483

        Rolling r83894 r83827 r83810 r83809 r83808 back in with
        a workaround for the gcc bug seen by the gtk bots

        * fast/dom/gc-10.html:

2011-04-15  Andreas Kling  <kling@webkit.org>

        Unreviewed, remove a Qt-specific expectation that's no longer needed.

        * platform/qt/Skipped:
        * platform/qt/fast/loader/onload-policy-ignore-for-frame-expected.txt: Removed.

2011-04-15  MORITA Hajime  <morrita@google.com>

        Reviewed by Dimitri Glazkov.

        RenderDetailsMarker should belong to shadow element.
        https://bugs.webkit.org/show_bug.cgi?id=58591

        * Render tree structure has changed.
        * Changed style rule on details-writing-mode.html to avoid to hit shadow CSS leak bug.
        
        * fast/html/details-writing-mode.html:
        * platform/chromium/test_expectations.txt:        
        * platform/mac/fast/html/details-add-summary-1-and-click-expected.checksum:
        * platform/mac/fast/html/details-add-summary-1-and-click-expected.png:
        * platform/mac/fast/html/details-add-summary-1-and-click-expected.txt: