@@ -1,3 +1,14 @@
+2011-04-15  Charlie Reis  <creis@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        [Chromium] fast/events/popup-allowed-from-gesture-initiated-form-submit.html causing debug ASSERT
+        https://bugs.webkit.org/show_bug.cgi?id=44079
+
+        Remove an assert whose invariant doesn't hold.
+
+        * platform/chromium/test_expectations.txt: Re-enable test.
+
 2011-04-15  Kinuko Yasuda  <kinuko@chromium.org>
 
         Reviewed by David Levin.
